# ou-content-author

./: pyproject.toml
ou_content_author/: __main__.py  handlers.py
ou_content_author/frontend/: package-lock.json  package.json  rollup.config.js  tailwind.config.js
ou_content_author/frontend/public/: index.html
ou_content_author/frontend/src/: App.svelte  global.d.ts  storage.ts
ou_content_author/frontend/src/components/: Button.svelte  FileEditor.svelte  FileTree.svelte  GitInteraction.svelte  ModalDialog.svelte  PageViewer.svelte
ou_content_author/frontend/src/store/: block.ts  connection.ts  index.ts  repository.ts
